<resources>
    <string name="app_name">App</string>
    <string name="welcome">Welcome</string>
    <string name="rememberMe">Remember Me</string>
    <string name="sign_up">Dont have an account?</string>
    <string name="create">Create</string>
    <string name="signupHeader">Sign Up</string>
    <string name="firstName">Enter First Name</string>
    <string name="lastName">Enter Last Name</string>
    <string name="gender">Enter Gender</string>
    <string name="phone">Enter Phone Number</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="dateofBirth">Enter Date Of Birth</string>
    <string name="address">Enter Address</string>
    <string name="success_user">User Successfully Created</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="changeLocation">Change Location</string>
    <string name="liveChat">Live Chat</string>
    <string name="help">Help</string>
    <string name="categories">Categories</string>
    <string name="gala_top_deals">Gala Top Deals</string>
    <string name="metro_post">METRO Post</string>
    <string name="gala_metro_post">Gala Metro Post</string>
    <string name="goto_home">Goto Home</string>
    <string name="gala_sale">Goto Sales Offer</string>
    <string name="gala_offers">Goto Offers</string>
    <string name="mentors">All the best mentors,</string>
    <string name="mentors_next">in one place.</string>
    <string name="mentors_line">Mentors entrepreneur will help you
        achieve your most ambitious goals.Come on lets smash them together.</string>
    <string name="getStarted">Get started</string>
    <string name="joining">Joining over 100,000 users smashing their goal.</string>
    <string name="createAnAccount">Create an account</string>
    <string name="realmentor">and become real mentor</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="seeyouagain">Good to see you back</string>
    <string name="joined">100,000 people has joined us</string>
    <string name="signUp">Sign Up</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="iAgreeToTerms">I agree to the terms and services</string>
    <string name="fullname">Enter full name</string>
    <string name="hello_goodMorning">Hello, Good Morning</string>
    <string name="learning_new">Its a great day to learn something new!</string>
    <string name="recommended_mentor">Recommended mentors</string>
    <string name="searchAnything">Search Anything</string>
    <string name="notificationHeading">Mentors Guide</string>
    <string name="notificationDetail">Find best teachers and guide here</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="storage">Storage</string>
    <string name="privacy">Privacy</string>
    <string name="suggested_mentor">Suggested Mentor</string>

</resources>