<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignUpActivity">

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amiko"
            android:text="@string/createAnAccount"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/realMentor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createAccountText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/realmentor"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_below="@id/realMentor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fNameSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/fullname"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

                <EditText
                    android:id="@+id/lNameSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/lastName"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

                <EditText
                    android:id="@+id/emailSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

                <EditText
                    android:id="@+id/passwordSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

                <EditText
                    android:id="@+id/addressSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/address"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

                <EditText
                    android:id="@+id/phoneSignUpActivity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phone"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/grey_edit_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/loginRememberMeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/iAgreeToTerms"
                    android:textColor="@color/black"
                    android:paddingLeft="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/signUp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:text="@string/joined"
                android:textSize="10sp"
                android:textColor="@color/grey" />
        </LinearLayout>

    </RelativeLayout>
</layout>