<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="getMemberAction"
            type="com.example.dividendatom.data.model.parser.GetMemberAction" />
    </data>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/amiko"
            android:text="@string/hello_goodMorning"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/great_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiko"
                android:text="@string/learning_new"
                android:textColor="@color/grey"
                android:textSize="10sp"
                android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchItems"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/great_day"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/searchItem"
                android:layout_width="359dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/searchAnything"
                android:paddingLeft="5dp"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/amiko"
                android:text="@string/suggested_mentor"
                android:layout_marginTop="18dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/firstTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchItems"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/valley" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/amiko"
                            android:text="Alec"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/amiko"
                            android:text="Stewart"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/secondTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstTab"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/green_valley" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/amiko"
                            android:text="Marnus"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/amiko"
                            android:text="Labuschangne"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recommendedMentor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondTab"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/amiko"
            android:text="@string/recommended_mentor"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mentorList"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/recommendedMentor" />

        </LinearLayout>
</layout>